sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: '(' expected but identifier found.
                         if plusPetit(i,j) { echange(i,j)
                            ^AlgBubbleSort1:7: error: illegal start of simple expression
                    } 
                    ^